<resources>
    <string name="app_name">ARES</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="emailHint">email</string>
    <string name="passwordHint">password</string>
    <string name="login">Log In</string>
    <string name="logo">Logo</string>
    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="viewRO">View RO</string>
    <string name="edit">Edit</string>
    <string name="new_repair_order">New Repair Order:</string>
    <string name="submit">submit</string>
    <string name="delete">delete</string>
    <string name="Employer">Employer</string>
    <string name="Employee">Employee</string>
    <string name="username">username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>