<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".RepairOrderFragment">
    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/back"
        android:backgroundTint="?attr/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:backgroundTint="?attr/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintEnd_toStartOf="@id/button_edit"
        app:layout_constraintStart_toEndOf="@id/button_back"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_edit"
        android:backgroundTint="?attr/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/edit"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="58dp"
        android:layout_marginBottom="672dp"
        android:background="?android:attr/listDivider"
        android:color="?attr/colorOnBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        android:color="?attr/colorOnBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/carimg"
        android:layout_marginTop="16dp"/>

    <TextView
        android:textColor="?attr/colorOnBackground"
        android:id="@+id/ro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@null"
        android:cursorVisible="false"
        android:focusable="false"
        android:text="RO:"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider2" />

    <EditText
        android:textColor="?attr/colorOnBackground"
        android:id="@+id/roNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@null"
        android:cursorVisible="false"
        android:focusable="false"
        android:imeOptions="flagNoExtractUi"
        android:textSize="30dp"
        app:layout_constraintStart_toEndOf="@id/ro"
        app:layout_constraintTop_toTopOf="@id/ro" />


    <EditText
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:textColor="?attr/colorOnBackground"
        android:imeOptions="flagNoExtractUi"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <EditText
        android:id="@+id/make"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:background="@null"
        android:imeOptions="flagNoExtractUi"
        android:textColor="?attr/colorOnBackground"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/year"
        app:layout_constraintStart_toEndOf="@id/year" />

    <EditText
        android:id="@+id/model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:imeOptions="flagNoExtractUi"
        android:padding="0dp"
        android:textColor="?attr/colorOnBackground"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="@id/year"
        app:layout_constraintTop_toBottomOf="@id/year" />

    <EditText
        android:id="@+id/plate"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@null"
        android:imeOptions="flagNoExtractUi"
        android:cursorVisible="false"
        android:focusable="false"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="?attr/colorOnBackground"
        app:layout_constraintBottom_toBottomOf="@id/model"
        app:layout_constraintTop_toTopOf="@id/model"
        app:layout_constraintEnd_toEndOf="@id/make"/>


    <TableLayout
        android:id="@+id/repair_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="16dp"
        android:stretchColumns="*"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ro" />


    <ImageView
        android:id="@+id/carimg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/plate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/divider"
        app:layout_constraintBottom_toBottomOf="@id/plate"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>